--- a/src/components/contacto.css
+++ b/src/components/contacto.css
@@ -5,6 +5,9 @@
 .container-contacto>h2{
     font-size: 32px;
 }
+.h2-habilidades__subtitle{
+    font-size: 32px;
+}
 .div-container__contacto{
     width: 90%;
     display: flex;
@@ -57,4 +60,13 @@
 .circulo-dos>i{
     font-size: 24px;
     color: rgba(190, 255, 60, 0.846);
+}
+
+@media screen and (max-width:600px){
+    .div-container__contacto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
