--- a/src/components/home.css
+++ b/src/components/home.css
@@ -6,7 +6,6 @@
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     height: 600px;
-    gap: 2rem;
 }
 
 .div-description__home{
@@ -106,7 +105,7 @@
     margin: auto; 
 }
 .img-coding{
-    width: 475px;
+    width: 350px;
     height: auto;
     background-color: transparent;
     animation-name: my-animation;
@@ -124,3 +123,21 @@
     75%{top: 2rem;}
     100% {top: 0;}
 }
+
+    @media screen and (max-width:1000px) {
+        .img-coding{
+            display: none;
+        }
+    }
+    @media screen and (max-width:600px) {
+        .div-title__home>h1{
+            font-size: 40px;
+        }
+        .p-description{
+            max-width: 360px;
+        }
+        .div-description__home{
+            max-width: 360px;
+        }
+    }
+
